--- a/index.html
+++ b/index.html
@@ -3,8 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <title>Dress your Corki</title>
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+
 </head>
 <body>
+
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+                <img data-src="IMG_1248.JPG" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img data-src="IMG_1248.JPG" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img data-src="IMG_1248.JPG" alt="Third slide">
+            </div>
+        </div>
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="icon-prev" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="icon-next" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+
+    <div class="title_div">
+        <p>TITLE</p>
+    </div>
+
+    <div class="well row body">
+        <div class="col-lg-offset-1 col-lg-1">
+            <button class="button">
+                Button
+            </button>
+        </div>
+        <div class="col-lg-offset-1 col-lg-6">
+            <div class="corgi">
+                HEAD
+            </div>
+        </div>
+        <div class="col-lg-offset-1 col-lg-1">
+            <button class="button">
+                Button
+            </button>
+        </div>
+    </div>
+
+    <div class="well row body">
+        <div class="col-lg-offset-1 col-lg-1">
+            <button class="button">
+                Button
+            </button>
+        </div>
+        <div class="col-lg-offset-1 col-lg-6">
+            <div class="corgi">
+                Body
+            </div>
+        </div>
+        <div class="col-lg-offset-1 col-lg-1">
+            <button class="button">
+                Button
+            </button>
+        </div>
+    </div>
+
+    <div class="well row body">
+        <div class="col-lg-offset-1 col-lg-1">
+            <button class="button">
+                Button
+            </button>
+        </div>
+        <div class="col-lg-offset-1 col-lg-6">
+            <div class="corgi">
+                Legs
+            </div>
+        </div>
+        <div class="col-lg-offset-1 col-lg-1">
+            <button class="button">
+                Button
+            </button>
+        </div>
+    </div>
+
+    <div class="link_div">
+        <p>Links</p>
+    </div>
+
+
 
 </body>
 </html>
