--- a/startbootstrap-full-slider-1.0.4/index.html
+++ b/startbootstrap-full-slider-1.0.4/index.html
@@ -38,29 +38,189 @@
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#myCarousel" data-slide-to="1"></li>
                         <li data-target="#myCarousel" data-slide-to="2"></li>
+                        <li data-target="#myCarousel" data-slide-to="3"></li>
+                        <li data-target="#myCarousel" data-slide-to="4"></li>
+                        <li data-target="#myCarousel" data-slide-to="5"></li>
+                        <li data-target="#myCarousel" data-slide-to="6"></li>
+                        <li data-target="#myCarousel" data-slide-to="7"></li>
+                        <li data-target="#myCarousel" data-slide-to="8"></li>
+                        <li data-target="#myCarousel" data-slide-to="9"></li>
+                        <li data-target="#myCarousel" data-slide-to="10"></li>
+                        <li data-target="#myCarousel" data-slide-to="11"></li>
+                        <li data-target="#myCarousel" data-slide-to="12"></li>
+                        <li data-target="#myCarousel" data-slide-to="13"></li>
+                        <li data-target="#myCarousel" data-slide-to="14"></li>
+                        <li data-target="#myCarousel" data-slide-to="15"></li>
+                        <li data-target="#myCarousel" data-slide-to="16"></li>
+                        <li data-target="#myCarousel" data-slide-to="17"></li>
+                        <li data-target="#myCarousel" data-slide-to="18"></li>
+                        <li data-target="#myCarousel" data-slide-to="19"></li>
+                        <li data-target="#myCarousel" data-slide-to="20"></li>
+                        <li data-target="#myCarousel" data-slide-to="21"></li>
+                        <li data-target="#myCarousel" data-slide-to="22"></li>
                     </ol>
 
                     <!-- Wrapper for Slides -->
                     <div class="carousel-inner">
                         <div class="item active">
                             <!-- Set the first background image using inline CSS below. -->
-                            <div class="fill" style="background-image:url('');"></div>
+                            <div class="fill" style="background-image:url('https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xfl1/v/t1.0-9/12963570_10207834400370233_664059977650841432_n.jpg?oh=3c0b3b61a856071952488490dfbd0ffc&oe=57BD832D');"></div>
                             <div class="carousel-caption">
                                 <h2>Caption 1</h2>
                             </div>
                         </div>
                         <div class="item">
                             <!-- Set the second background image using inline CSS below. -->
-                            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
+                            <div class="fill" style="background-image:url('https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/12932662_10207834360809244_5980065554972483029_n.jpg?oh=a542a558ebc3107c78369e8f677810a2&oe=5780728B');"></div>
                             <div class="carousel-caption">
                                 <h2>Caption 2</h2>
                             </div>
                         </div>
                         <div class="item">
                             <!-- Set the third background image using inline CSS below. -->
-                            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+                            <div class="fill" style="background-image:url('https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xla1/v/t1.0-9/12963485_10207834360609239_1381761538621017298_n.jpg?oh=814d036591b4f75dd140003b2b3f8e20&oe=57AC61CA');"></div>
                             <div class="carousel-caption">
                                 <h2>Caption 3</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://scontent-lax3-1.xx.fbcdn.net/hphotos-xft1/t31.0-8/12967386_10207834366849395_6560117906975662971_o.jpg');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 4</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://scontent-lax3-1.xx.fbcdn.net/hphotos-xtp1/t31.0-8/12983193_10207834380729742_7720928288265877021_o.jpg');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 5</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://scontent-lax3-1.xx.fbcdn.net/hphotos-xpa1/t31.0-8/13002553_10207834383609814_1212605310661468103_o.jpg');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 6</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://scontent-lax3-1.xx.fbcdn.net/hphotos-xtp1/t31.0-8/12961429_10207834377529662_7066846008749751291_o.jpg');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 7</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://scontent-lax3-1.xx.fbcdn.net/hphotos-xfp1/l/t31.0-8/13002346_10207834386609889_1808411559343253489_o.jpg');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 8</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://scontent-lax3-1.xx.fbcdn.net/hphotos-xpt1/t31.0-8/12973253_10207834360649240_5627939021150406239_o.jpg');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 9</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://lh6.googleusercontent.com/n5jXMEHR-Tj4nl_mhfD7bOet5CLo89ukUYgK6eBfkvdkWpxAIwM3P5NOgXgh2IV5Gki3Wg=w2560-h1210');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 10</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://lh3.googleusercontent.com/CTBIKUq-8ZqzCJu2Y_Qs35JIJslLJFh3mEgsRQBO1B6CN1REhBcghAruO2vgCUvPsypbVA=w2560-h1210');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 11</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://lh6.googleusercontent.com/ZgC3YL7k88-bkFYYlqwERg9XrXr9Q-UJsyHwaRyr7fAoEp90xiak-C4i39StjNkem4ROxw=w2560-h1210');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 12</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/12931166_10207834365769368_4525958374233479455_n.jpg?oh=0341570ba5074195aac8ea4f431f5c92&oe=57B1391E');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 13</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://lh5.googleusercontent.com/2rEbepKyal3JFeb3McaR4n8Lua2fravt-Xn8T7WEGXoGhAzSc6ZzGNlQ0ENHmYY0fBbvfA=w2560-h1210');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 14</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://lh3.googleusercontent.com/XnI-Xikcxq0GlrGChZGL6q_MkjN0chz7tcXluyB437JLXXOQ-Pd7MRVUvfdhJ5KFpcvw4g=w2560-h1210');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 15</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xlp1/v/t1.0-0/p206x206/12961696_532167853632027_2389108124011485785_n.jpg?oh=c08f9a306c71ee6f5b64fc9dd613398e&oe=577F3C2A');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 16</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xpt1/v/t1.0-9/12718018_10207834372249530_7541024539424811356_n.jpg?oh=ca1a37a8296ac35b2de8d72479079360&oe=57BE1BD1');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 17</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://i.groupme.com/844x1500.jpeg.bb30a78dc3674d4781c9fb22d4b5535e');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 18</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://i.groupme.com/2064x1161.png.f6f07a2273be4c648da37bf93f197a01');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 19</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://i.groupme.com/1125x1500.jpeg.35488c363161435a9e3b1e834924edd2');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 20</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://i.groupme.com/844x1500.jpeg.d4510fb116854df4b7b212f55c6b9c5f');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 21</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://i.groupme.com/640x1136.jpeg.813474518d4e40889a1636f8b9a67f6c');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 22</h2>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <!-- Set the third background image using inline CSS below. -->
+                            <div class="fill" style="background-image:url('https://i.groupme.com/1136x852.jpeg.096ed9fa42164a7982eeb59acaca995c');"></div>
+                            <div class="carousel-caption">
+                                <h2>Caption 23</h2>
                             </div>
                         </div>
                     </div>
